--- a/main.html
+++ b/main.html
@@ -17,12 +17,12 @@
 			<th>BRANCH</th>
 		</tr>
 		<tr>
-			<td>Shaw</td>
+			<td>Suhani</td>
 			<td>20</td>
 			<td>CSE</td>
 		</tr>
 		<tr>
-			<td>Adil</td>
+			<td>Siwani</td>
 			<td>21</td>
 			<td>ECE</td>
 		</tr>
