--- a/main.html
+++ b/main.html
@@ -3,10 +3,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table, th, tr, td{
+			border:1px solid black;
+			background-color: yellow
+		}
+	</style>
 </head>
 
 <body>
-	<table  >
+	<!-- the entire body must be written by student -->
+	<table>
 		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
@@ -17,7 +24,6 @@
 			<td>Shaw</td>
 			<td>20</td>
 			<td>CSE</td>
-			
 		</tr>
 		<tr>
 			<td>Adil</td>
@@ -25,7 +31,6 @@
 			<td>ECE</td>
 		</tr>
 	</table>
-	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
